--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "element-ui": "^2.3.6",
     "font-awesome": "^4.7.0",
+    "mavon-editor": "^2.5.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
